@@ -334,9 +334,6 @@ Error handling
 GTKMM GUI
 ---------
 
-	[ ]  --debug and GTKMM? With GTKMM 2.15.5 it fails because of
-	     "new" operator collisions.
-
 	[ ]  Make the misc/gxemul-gui.png icon more meaningful!
 
 	[ ]  Command input window!  Make it look nice.
